--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "serve": "webpack-dev-server --watch --progress",
     "serve:prod": "webpack-dev-server --env=prod",
     "build:dev": "webpack",
-    "build:prod": "webpack --env=prod"
+    "build:prod": "webpack --env=prod",
+    "postinstall": "cd ./node_modules/esn-frontend-login && npm install && npm run build"
   },
   "author": "",
   "license": "AGPLv3",
@@ -28,6 +29,7 @@
     "babel-plugin-angularjs-annotate": "^0.10.0",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.6.0",
+    "esn-frontend-login": "github:openpaas-suite/esn-frontend-login#main",
     "exports-loader": "^1.0.0",
     "expose-loader": "^1.0.0",
     "favicons-webpack-plugin": "^3.0.1",
