--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.6.0",
     "esn-frontend-login": "github:openpaas-suite/esn-frontend-login#main",
+    "dotenv-webpack": "^2.0.0",
     "exports-loader": "^1.0.0",
     "expose-loader": "^1.0.0",
     "favicons-webpack-plugin": "^3.0.1",
